# template-service-python

./: .gitignore  .prettierignore  README.md  Taskfile.yaml  cookiecutter.json  package-lock.json  package.json
.github/actions/setup_environment/: action.yaml
.github/workflows/: check-pr.yaml
hooks/: post_gen_project.py
tests/: __main__.py  replays.json  replays.py
tests/utils/: cli.py  replay.py
{{cookiecutter.service_short_slug}}/: .gitignore  Dockerfile  README.md  Taskfile.yaml  pyproject.toml  {{cookiecutter._empty_guard}}.lintstagedrc.json
{{cookiecutter.service_short_slug}}/lib/app/: __init__.py  app.py  errors.py  settings.py
{{cookiecutter.service_short_slug}}/lib/utils/: lifecycle_manager.py
{{cookiecutter.service_short_slug}}/lib/utils/logging/: config.py
